refactor: add some configs

--- a/src/styles/abstract/_constants.scss
+++ b/src/styles/abstract/_constants.scss
@@ -55,7 +55,7 @@ $color-frosted_glass_white: #fdfdff;
 $color-rad: #d31414;
 $color-overlay: rgba(80, 80, 80, 0.4);
 $color-modal-background: #f5f7f6;
-$font-family-roboto: 'Roboto', sans-serif;
+$font-family-roboto: "Roboto", sans-serif;
 
 $color-header-background: black;
 $color-footer-background: black;
