--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: url('./assets/gallery_background.jpg');
+  background-image: url("./assets/gallery_background.jpg");
   background-size: auto;
   margin: 0;
   min-width: 320px;
