--- a/src/styles/abstract/_variables.scss
+++ b/src/styles/abstract/_variables.scss
@@ -1,3 +1,3 @@
-@import './constants';
-@import './mixins';
-@import './placeholders';
+@import "./constants";
+@import "./mixins";
+@import "./placeholders";
