feat: add logout icon

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -15,4 +15,12 @@
 
 .container {
   margin: 0 20px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.logout {
+  cursor: pointer;
 }
