--- a/src/styles/abstract/_constants.scss
+++ b/src/styles/abstract/_constants.scss
@@ -60,6 +60,10 @@ $font-family-roboto: "Roboto", sans-serif;
 $color-header-background: black;
 $color-footer-background: black;
 
+$header-height: 60px;
+$header-sticky-height: 50px;
+$footer-height: 60px;
+
 $color-donate-orang: #fe9013;
 $color-donate-gray: #929699;
 
