--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #000;
+  background-color: $color-footer-background;
   height: 60px;
 }
 
@@ -8,7 +8,9 @@
 }
 
 .container {
-  margin: 0 20px;
+  margin: 0 auto;
+  padding: 0 30px;
+  max-width: $content-width;
   height: 100%;
   display: flex;
   align-items: center;
