feat: add menu burger

--- a/src/styles/abstract/_constants.scss
+++ b/src/styles/abstract/_constants.scss
@@ -58,6 +58,7 @@ $color-modal-background: #f5f7f6;
 $font-family-roboto: "Roboto", sans-serif;
 
 $color-header-background: black;
+$color-header-background-sticky: rgb(201, 201, 201);
 $color-footer-background: black;
 
 $header-height: 60px;
