--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -5,26 +5,11 @@
   color: #fff;
 }
 
-.navLink {
-  font-size: 18px;
-  text-decoration: none;
-  color: #fff;
-}
-
-.navLink:hover {
-  text-decoration: underline;
-  text-underline-offset: 3px;
-}
-
 .sticky {
   top: 0px;
   position: sticky;
-  background-color: rgb(176, 176, 176);
+  background-color: $color-header-background-sticky;
   height: $header-sticky-height;
-}
-
-.stickyText {
-  color: #000;
 }
 
 .container {
@@ -56,11 +41,6 @@
 }
 
 .btns {
-  display: flex;
-  gap: 20px;
-}
-
-.nav {
   display: flex;
   gap: 20px;
 }
