feat: add addaptive

--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -30,3 +30,13 @@
   display: flex;
   gap: 7px;
 }
+
+@media (max-width: $custom-mobile-big-width) {
+  .logoRss {
+    height: 35px;
+  }
+
+  .github {
+    height: 35px;
+  }
+}
