--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,15 +1,15 @@
 .header {
   height: $header-height;
   background-color: $color-header-background;
-  transition: all 0.5s;
   color: #fff;
+  position: sticky;
 }
 
 .sticky {
   top: 0px;
   position: sticky;
-  background-color: $color-header-background-sticky;
   height: $header-sticky-height;
+  animation: slideDown 0.35s ease-out;
 }
 
 .container {
@@ -43,4 +43,13 @@
 .btns {
   display: flex;
   gap: 20px;
+}
+
+@keyframes slideDown {
+  from {
+    transform: translateY(-100%);
+  }
+  to {
+    transform: translateY(0);
+  }
 }
