feat: add svg plugin and add monaco-editor

--- a/src/styles/abstract/_constants.scss
+++ b/src/styles/abstract/_constants.scss
@@ -72,3 +72,8 @@ $mobile-big-width: 640px;
 $custom-mobile-big-width: 590px;
 $custom-middle-width: 460px;
 $mobile-small-width: 320px;
+
+$color-primary: #202a3b;
+$color-secondary: #303949;
+$color-additional-1: #fff;
+$color-additional-2: #caccd0;
