--- a/src/styles/abstract/_constants.scss
+++ b/src/styles/abstract/_constants.scss
@@ -75,5 +75,5 @@ $mobile-small-width: 320px;
 
 $color-primary: #202a3b;
 $color-secondary: #303949;
-$color-additional-1: #fff;
-$color-additional-2: #caccd0;
+$color-main: #caccd0;
+$color-positive: #2cab7d;
