--- a/src/components/button/Button.module.scss
+++ b/src/components/button/Button.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: none;
-  outline: none;
   font-size: 16px;
+  cursor: pointer;
+  user-select: none;
 }
