--- a/src/components/auth-form/AuthForm.module.scss
+++ b/src/components/auth-form/AuthForm.module.scss
@@ -2,8 +2,8 @@
   background: white;
   position: relative;
   margin: auto;
-  width: 50%;
-  min-width: 400px;
+  width: 314px;
+  max-width: 512px;
   padding: 2rem;
   box-shadow: 0px 1px 2px rgba(58, 58, 68, 0.24), 0px 2px 4px rgba(90, 91, 106, 0.24);
 }
@@ -18,9 +18,9 @@
   height: 2rem;
   transition: all 0.3s;
   color: rgb(255, 255, 255);
-  background-color: rgba(0, 165, 91, 0.7725490196);
+  background-color: #00a82d;
   cursor: pointer;
   &:hover:not([disabled]) {
-    background-color: #03c86f;
+    background-color: #008f26;
   }
 }
