refactor: change css module using approach

--- a/src/components/status-marker/StatusMarker.module.scss
+++ b/src/components/status-marker/StatusMarker.module.scss
@@ -16,10 +16,10 @@
   background-color: $color-negative;
 }
 
-.status {
+.status-code {
   color: rgba($color-positive, 0.5);
 }
 
-.error-status {
+.error-status-code {
   color: rgba($color-negative, 0.5);
 }
