feat: add auth button to header

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -32,11 +32,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
 
-.auth:hover {
-  transform: scale(1.05);
-  text-decoration: solid;
+  &:hover {
+    transform: scale(1.05);
+    text-decoration: solid;
+  }
 }
 
 .btns {
