feat: add authform loader

--- a/src/components/auth-form/AuthForm.module.scss
+++ b/src/components/auth-form/AuthForm.module.scss
@@ -11,7 +11,19 @@
   color: rgb(255, 255, 255);
   background-color: #00a82d;
   cursor: pointer;
+
   &:hover:not([disabled]) {
     background-color: #008f26;
+  }
+
+  &:disabled {
+    background-color: #9c9e9c;
+  }
+
+  .progress-span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
   }
 }
