feat: add styling and some icon to schema component

--- a/src/styles/abstract/_constants.scss
+++ b/src/styles/abstract/_constants.scss
@@ -83,3 +83,6 @@ $color-secondary: #303949;
 $color-main: #caccd0;
 $color-positive: #2cab7d;
 $color-negative: #cb3837;
+$color-additional-1: #ff6b8b;
+$color-additional-2: #ec9b00;
+$color-additional-3: #5f89d8;
