feat: add developer card

--- a/src/pages/welcomePage/WelcomePage.module.scss
+++ b/src/pages/welcomePage/WelcomePage.module.scss
@@ -12,3 +12,9 @@
     text-decoration: solid;
   }
 }
+
+.text-underline {
+  width: 100%;
+  border-bottom: 1px solid #0000003f;
+  text-align: left;
+}
