--- a/src/pages/welcomePage/WelcomePage.module.scss
+++ b/src/pages/welcomePage/WelcomePage.module.scss
@@ -17,4 +17,13 @@
   width: 100%;
   border-bottom: 1px solid #0000003f;
   text-align: left;
+  padding-top: 1rem;
+}
+
+.developers-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+  padding: 1rem 0;
 }
