--- a/src/components/schema/Schema.module.scss
+++ b/src/components/schema/Schema.module.scss
@@ -1,14 +1,45 @@
+.schema {
+  position: relative;
+  padding: 0 10px;
+  color: $color-main;
+  flex: 1;
+  overflow-y: auto;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin: 10px 0;
+
+  &::-webkit-scrollbar {
+    width: 0;
+  }
+}
+
+.schema-heading {
+  min-height: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  padding: 5px 0;
+  justify-content: space-between;
+}
+
+.previous-button {
+  display: flex;
+  gap: 10px;
+  padding: 0 10px;
+  width: auto;
+}
+
 .field {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  padding: 10px 20px;
-  border-radius: 15px;
+  padding: 10px;
+  border-radius: 10px;
   background-color: rgba($color-secondary, 0.5);
   overflow: hidden;
   color: $color-main;
-
-  margin-bottom: 20px; // DELETE WHEN MOUNT
 
   &:hover {
     background-color: $color-secondary;
@@ -38,23 +69,26 @@
 }
 
 .arg-block {
+  display: block;
   margin-left: 10px;
 }
 
-.scalar-name {
+.name {
   font-size: 22px;
+  font-weight: 500px;
 }
 
 .scalar-description {
   code {
     border-radius: 5px;
-    font-size: 18px;
+    font-size: 16px;
     padding: 1px 2px;
     background-color: rgba($color-main, 0.2);
   }
 }
 
 .title {
+  margin-top: 5px;
   color: $color-main;
   display: flex;
   align-items: center;
