refactor: remove unnecessary block of codes and assets

--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -38,7 +38,7 @@
     padding: 20px;
     position: absolute;
     opacity: 0;
-    background-color: $color-header-background;
+    background-color: $color-primary;
   }
   .nav.active {
     transition: all 0.3s;
