--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,6 +1,6 @@
 .header {
   height: $header-height;
-  background-color: $color-header-background;
+  background-color: $color-primary;
   color: #fff;
 }
 
