--- a/src/index.scss
+++ b/src/index.scss
@@ -3,24 +3,31 @@
 *::after {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-}
-
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
   font-weight: 400;
 }
 
 body {
-  margin: 0;
-  padding: 0;
   min-width: 320px;
+}
+
+#root {
   min-height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .wrapper {
-  min-height: 100vh;
-  max-width: 1220px;
+  max-width: $max-content-width;
+  min-width: $min-content-width;
   margin: 0 auto;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding: 0 30px;
+
+  @include mobile {
+    padding: 0 10px;
+  }
 }
