--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -1,6 +1,6 @@
 $header-height: 60px;
 $header-sticky-height: 50px;
-$footer-height: 300px;
+$footer-height: 200px;
 
 $content-width: 1600px;
 $custom-mobile-big-width: 590px;
@@ -11,7 +11,7 @@ $desktop-min-width: 1440px;
 $laptop-max-width: 1439px;
 $laptop-min-width: 1024px;
 
-$mobile-max-width: 1023px;
+$tablet-max-width: 1023px;
 $tablet-min-width: 768px;
 
 $mobile-max-width: 767px;
