--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -1,9 +1,5 @@
-$header-height: 60px;
-$header-sticky-height: 50px;
+$header-height: 90px;
 $footer-height: 200px;
-
-$content-width: 1600px;
-$custom-mobile-big-width: 590px;
 
 $desktop-max-width: 1920px;
 $desktop-min-width: 1440px;
@@ -28,3 +24,4 @@ $color-negative: #cb3837;
 $color-additional-1: #ff6b8b;
 $color-additional-2: #ec9b00;
 $color-additional-3: #5f89d8;
+$color-additional-4: #a836d6;
