--- a/src/components/buttons/square-button/SquareButton.module.scss
+++ b/src/components/buttons/square-button/SquareButton.module.scss
@@ -14,6 +14,7 @@
   background-color: transparent;
 
   &:hover {
+    text-shadow: 0 0 1px $color-main;
     background-color: $color-secondary;
   }
 
