--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -3,6 +3,7 @@
   background-color: $color-secondary;
   height: $footer-height;
   padding: 30px 0;
+  width: 100%;
 
   @include mobile {
     height: auto;
