--- a/src/index.scss
+++ b/src/index.scss
@@ -15,16 +15,18 @@ body {
 }
 
 #root {
-  margin-top: $header-height;
+  padding-top: $header-height;
   color: $color-main;
   min-height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
 }
 
 .wrapper {
+  flex: 1;
   max-width: $max-content-width;
   min-width: $min-content-width;
   margin: 0 auto;
@@ -33,4 +35,8 @@ body {
   @include tablet {
     padding: 0 10px;
   }
+}
+
+a {
+  text-decoration: none;
 }
