feat: add final styles to welcome page

--- a/src/components/avatar/Avatar.module.scss
+++ b/src/components/avatar/Avatar.module.scss
@@ -1,30 +1,15 @@
 .avatar-container {
-  box-sizing: border-box;
-  -webkit-tap-highlight-color: transparent;
-  outline: 0px;
-  margin: 0px;
-  user-select: none;
-  vertical-align: middle;
-  appearance: none;
-  text-decoration: none;
-  text-transform: uppercase;
-  min-width: 64px;
-  color: rgb(25, 118, 210);
-  border: 0px;
-  position: relative;
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 10px 1px;
-  border-radius: 100vmax;
-  width: 100%;
-  height: 100%;
   display: flex;
-  -webkit-box-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  align-items: center;
+  background: $color-primary;
+  box-shadow: 0px 0px 10px 2px rgba(black, 0.3);
+  border-radius: 50%;
+  width: 100%;
+  aspect-ratio: 1/1;
   padding: 2px;
-  background: white;
+  user-select: none;
   cursor: pointer;
-  transition: none 0s ease 0s;
+  overflow: hidden;
+
   &:hover {
     background: linear-gradient(270deg, rgb(201, 113, 255) 24.97%, rgb(92, 121, 252) 100%);
   }
@@ -33,18 +18,6 @@
 .avatar-image {
   width: 100%;
   height: 100%;
-  border-radius: 100vmax;
-  background-color: rgba(252, 250, 249, 0);
+  border-radius: 50%;
   object-fit: cover;
-}
-
-.avatar-shadow {
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 10px 1px inset;
-  position: absolute;
-  top: 2px;
-  pointer-events: none;
-  left: 2px;
-  width: calc(100% - 4px);
-  height: calc(100% - 4px);
-  border-radius: 100vmax;
 }
