--- a/src/components/auth-welcome-controller/AuthWelcomeController.module.scss
+++ b/src/components/auth-welcome-controller/AuthWelcomeController.module.scss
@@ -1,6 +1,9 @@
 .container {
   display: flex;
-  gap: 0.5rem;
+  align-items: center;
+  gap: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .login-link {
