--- a/src/components/developer-card/DeveloperCard.module.scss
+++ b/src/components/developer-card/DeveloperCard.module.scss
@@ -2,10 +2,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1rem;
-  background-color: white;
+  gap: 10px;
+  padding: 15px;
+  background-color: $color-secondary;
+  border-radius: 15px;
   max-width: 300px;
-  box-shadow: 0px 1px 2px rgba(58, 58, 68, 0.24), 0px 2px 4px rgba(90, 91, 106, 0.24);
+  overflow: hidden;
+  box-shadow: 0px 0px 10px 2px rgba(black, 0.3);
+
+  .info {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
 }
 
 .developer-card-description {
