--- a/src/index.scss
+++ b/src/index.scss
@@ -30,10 +30,10 @@ body {
   max-width: $max-content-width;
   min-width: $min-content-width;
   margin: 0 auto;
-  padding: 0 30px;
+  padding: 30px;
 
   @include tablet {
-    padding: 0 10px;
+    padding: 10px;
   }
 }
 
