--- a/src/pages/welcomePage/WelcomePage.module.scss
+++ b/src/pages/welcomePage/WelcomePage.module.scss
@@ -1,29 +1,33 @@
-.auth-welcome {
-  background-color: #232dea;
-  color: rgb(255, 255, 255);
-  border-radius: 5px;
-  border: none;
-  cursor: pointer;
-  transition: all 0.3s;
-  height: 2rem;
+.welcome {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  padding: 30px 0;
+}
 
-  &:hover {
-    transform: scale(1.05);
-    text-decoration: solid;
-  }
+.heading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.info-content {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .text-underline {
+  padding-top: 20px;
   width: 100%;
-  border-bottom: 1px solid #0000003f;
-  text-align: left;
-  padding-top: 1rem;
+  font-size: 20px;
+  border-bottom: 1px solid $color-main;
 }
 
 .developers-container {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 1rem;
-  padding: 1rem 0;
+  gap: 20px;
 }
