--- a/src/components/playground/Playground.module.scss
+++ b/src/components/playground/Playground.module.scss
@@ -134,3 +134,15 @@
     flex: 1;
   }
 }
+
+.center {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.none {
+  display: none;
+}
