--- a/src/components/buttons/square-button/SquareButton.module.scss
+++ b/src/components/buttons/square-button/SquareButton.module.scss
@@ -21,6 +21,11 @@
   &:active {
     outline: 2px solid $color-main;
   }
+
+  @include mobile {
+    width: 35px;
+    height: 35px;
+  }
 }
 
 .square-button-active {
