--- a/src/components/playground/Playground.module.scss
+++ b/src/components/playground/Playground.module.scss
@@ -6,6 +6,16 @@
   display: flex;
   gap: 10px;
   overflow-x: hidden;
+
+  @include tablet {
+    height: auto;
+    overflow-y: auto;
+  }
+
+  @include mobile {
+    padding: 5px;
+    gap: 5px;
+  }
 }
 
 .side-bar {
@@ -22,6 +32,10 @@
       background-color: rgba($color-positive, 0.9);
     }
   }
+
+  @include mobile {
+    padding-right: 5px;
+  }
 }
 
 .playground-container {
@@ -33,6 +47,13 @@
   background-color: $color-secondary;
   border-radius: 20px;
   overflow: hidden;
+
+  @include tablet {
+    flex-direction: column;
+  }
+  @include mobile {
+    padding: 5px;
+  }
 }
 
 .playground-section {
@@ -41,6 +62,12 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  @include tablet {
+    min-height: 70vh;
+  }
+  @include mobile {
+    min-height: 85vh;
+  }
 }
 
 .schema-container {
@@ -69,6 +96,11 @@
   gap: 10px;
   padding: 10px;
   align-items: center;
+
+  @include mobile {
+    padding: 5px;
+    gap: 5px;
+  }
 }
 
 .editor-title,
@@ -86,9 +118,20 @@
   font-weight: normal;
   color: $color-main;
   margin: 0;
+  overflow-x: auto;
+
+  &::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+  }
 
   &:hover {
     text-shadow: 0 0 1px $color-main;
+  }
+
+  @include mobile {
+    font-size: 16px;
+    padding: 0 5px;
   }
 }
 
