--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -6,6 +6,8 @@
 
 .nav-link {
   position: relative;
+  text-transform: uppercase;
+  font-weight: bold;
   font-size: 20px;
   color: rgba($color-main, 0.8);
   text-decoration: none;
