--- a/src/index.scss
+++ b/src/index.scss
@@ -11,21 +11,28 @@
 
 body {
   min-width: 320px;
+  width: 100vw;
+  overflow-x: hidden;
   background-color: $color-primary;
+  padding-right: calc(100vw - 100%);
+
+  @media (hover: none) {
+    padding: 0;
+  }
 }
 
 #root {
-  padding-top: $header-height;
+  padding-top: $header-max-height;
   color: $color-main;
   min-height: 100vh;
-  width: 100%;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
 
   @include mobile {
-    padding-top: calc($header-height - 30px);
+    padding-top: calc($header-max-height - 10px);
   }
 }
 
@@ -37,7 +44,7 @@ body {
   padding: 30px;
 
   @include tablet {
-    padding: 10px;
+    padding: 5px 10px;
   }
 }
 
