--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -7,7 +7,6 @@
 .nav-link {
   position: relative;
   text-transform: uppercase;
-  font-weight: bold;
   font-size: 20px;
   color: rgba($color-main, 0.8);
   text-decoration: none;
@@ -26,9 +25,26 @@
     transition: scale 0.3s;
   }
 
+  &::after {
+    content: "";
+    position: absolute;
+    background-color: $color-main;
+    width: 100%;
+    height: 2px;
+    top: -2px;
+    right: 0;
+    transform-origin: right;
+    scale: 0 1;
+    transition: scale 0.3s;
+  }
+
   &:hover {
     color: $color-main;
     &::before {
+      scale: 1;
+    }
+
+    &::after {
       scale: 1;
     }
   }
