--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-weight: 400;
 }
 
