--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,2 +1,7 @@
+@font-face {
+  font-family: "Open Sans";
+  src: url("./fonts/OpenSans-VariableFont_wdth,wght.ttf") format("TrueType");
+}
+
 @import "./constants";
 @import "./mixins";
