--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -15,7 +15,7 @@
   &::before {
     content: "";
     position: absolute;
-    background-color: $color-main;
+    background: linear-gradient(90deg, $color-main, $color-additional-3, $color-additional-4);
     width: 100%;
     height: 2px;
     bottom: -2px;
@@ -28,7 +28,7 @@
   &::after {
     content: "";
     position: absolute;
-    background-color: $color-main;
+    background: linear-gradient(90deg, $color-main, $color-additional-3, $color-additional-4);
     width: 100%;
     height: 2px;
     top: -2px;
@@ -52,6 +52,11 @@
 
 .active {
   color: $color-main;
+  background: linear-gradient(90deg, $color-main, $color-additional-3, $color-additional-4);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+
   &::before {
     scale: 1;
   }
