--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,7 @@
 @font-face {
   font-family: "Open Sans";
   src: url("./fonts/OpenSans-VariableFont_wdth,wght.ttf") format("TrueType");
+  font-display: block;
 }
 
 @import "./constants";
