--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: "Open Sans";
+  src: url("./assets/fonts/OpenSans-VariableFont_wdth\,wght.ttf") format("TrueType");
+  font-display: block;
+}
+
 *,
 *::before,
 *::after {
