--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
+@import "normalize.css";
 @font-face {
   font-family: "Open Sans";
   src: url("./assets/fonts/OpenSans-VariableFont_wdth\,wght.ttf") format("TrueType");
@@ -27,7 +28,7 @@ body {
   }
 }
 
-#root {
+#app {
   padding-top: $header-max-height;
   color: $color-main;
   min-height: 100vh;
