--- a/src/pages/landing/Landing.module.scss
+++ b/src/pages/landing/Landing.module.scss
@@ -1,18 +1,46 @@
-.welcome {
+.landing {
+  width: 100%;
+}
+
+.articles {
   display: flex;
-  flex-direction: column;
-  gap: 30px;
+  gap: 5vw;
+  height: calc(100vh - $header-max-height - 5px);
+  min-height: 500px;
+  overflow-x: scroll;
+  overflow-y: auto;
+  margin-bottom: 5px;
+  scroll-snap-type: x mandatory;
+
+  &::-webkit-scrollbar {
+    height: 5px;
+    width: 0;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 15px;
+    background-color: rgba($color-main, 0.8);
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: rgba($color-main, 0.2);
+    border-radius: 15px;
+  }
 
   @include mobile {
-    padding: 30px 10px;
+    height: calc(100vh - $header-max-height + 5px);
   }
 }
 
-.heading {
+.article {
+  min-width: 100%;
+  height: 100%;
+  scroll-snap-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
+  justify-content: center;
+  gap: calc(5vh);
 }
 
 .heading-title {
@@ -21,12 +49,6 @@
   @include tablet {
     font-size: 40px;
   }
-}
-
-.info-container {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
 }
 
 .info-content {
@@ -54,9 +76,9 @@
 
 .layered-text {
   position: relative;
-  color: $color-main;
+  color: $color-secondary;
   font-weight: bold;
-  -webkit-text-stroke: 1px $color-secondary;
+  -webkit-text-stroke: 1px $color-main;
 
   &::before,
   &::after {
@@ -70,7 +92,7 @@
 
   &:hover::before {
     z-index: 1;
-    color: $color-positive;
+    color: rgba($color-additional-3, 0.7);
     -webkit-text-stroke: 1px $color-secondary;
     translate: 5px -5px;
   }
