--- a/src/components/common/navbar/Navbar.module.scss
+++ b/src/components/common/navbar/Navbar.module.scss
@@ -1,9 +1,3 @@
-.nav {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-}
-
 .nav-link {
   position: relative;
   text-transform: uppercase;
@@ -18,11 +12,12 @@
     background: linear-gradient(90deg, $color-main, $color-additional-3, $color-additional-4);
     width: 100%;
     height: 2px;
+    border-radius: 5px;
     bottom: -2px;
     left: 0;
     transform-origin: left;
     scale: 0 1;
-    transition: scale 0.3s;
+    transition: scale 0.3s linear 0.1s;
   }
 
   &::after {
@@ -31,15 +26,17 @@
     background: linear-gradient(90deg, $color-main, $color-additional-3, $color-additional-4);
     width: 100%;
     height: 2px;
+    border-radius: 5px;
     top: -2px;
     right: 0;
     transform-origin: right;
     scale: 0 1;
-    transition: scale 0.3s;
+    transition: scale 0.3s linear 0.1s;
   }
 
   &:hover {
     color: $color-main;
+
     &::before {
       scale: 1;
     }
@@ -62,9 +59,16 @@
   }
 }
 
+.nav {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
 .burger-icon {
   display: none;
   fill: $color-main;
+  transition: opacity 0.7s ease-in, left 0.7s ease-in;
 }
 
 @include mobile {
@@ -79,14 +83,16 @@
     border-radius: 5px;
     top: 70px;
     left: -1000px;
-    padding: 30px;
+    width: 100%;
+    padding: 20px 10px;
     opacity: 0;
-    background-color: $color-secondary;
-    transition: opacity 0.3s, left 0.3s;
+    background-color: rgba($color-secondary, 0.4);
+    backdrop-filter: blur(2px);
+    transition: opacity 0.7s ease-out, left 0.7s ease-out;
   }
 
   .nav-active {
     opacity: 1;
-    left: 20px;
+    left: 0px;
   }
 }
