--- a/src/components/layout/header/Header.module.scss
+++ b/src/components/layout/header/Header.module.scss
@@ -11,19 +11,16 @@
   padding-bottom: 15px;
   transition: background 0.5s, padding-top 0.4s, padding-bottom 0.4s;
 
-  .language {
+  .language,
+  .auth {
     background-color: $color-secondary;
     height: 40px;
     border-radius: 8px;
-  }
+    transition: outline 0.5s;
 
-  .auth {
-    background-color: $color-secondary;
-  }
-
-  @media (hover: none) {
-    padding-right: 10px;
-    padding-left: 10px;
+    &:hover {
+      outline: 1px solid $color-main;
+    }
   }
 
   @include mobile {
@@ -52,6 +49,7 @@
 
   @include mobile {
     height: calc($header-max-height - 40px);
+    gap: 5px;
   }
 }
 
@@ -59,4 +57,8 @@
   display: flex;
   align-items: center;
   gap: 10px;
+
+  @include mobile {
+    gap: 5px;
+  }
 }
