feat: improve routing logic

--- a/src/index.scss
+++ b/src/index.scss
@@ -43,6 +43,11 @@ body {
   }
 }
 
+.loader-screen {
+  height: 100vh !important;
+  width: 100vw !important;
+}
+
 .wrapper {
   flex: 1;
   max-width: $max-content-width;
